tests/NormalTests/paczka2/big_fuzzy/25969163.err
Error in line 5: S912 A13 15,0
Error in line 1: oKb4R S225 36,2
Error in line 7: 9NFdVUf S225 72,9
Error in line 17: 9NFdVUf S912 32,4
Error in line 18: eEiQZoI S225 72,1
Error in line 22: TOa2ajrYe S225 66,1
Error in line 27: TOa2ajrYe A266 72,6
Error in line 32: oKb4R S912 84,2
Error in line 41: CW09H7V3kC S912 7,4
Error in line 47: oKb4R S225 81,7
Error in line 52: TOa2ajrYe S225 42,70
Error in line 48: 9NFdVUf S225 93,5
Error in line 51: S912 A13 58,4
Error in line 57: S912 S912 56,6
Error in line 66: S912 A13 9,5
Error in line 65: PVx A266 68,3
Error in line 79: oKb4R S912 86,0
Error in line 74: PVx A13 71,7
Error in line 80: oKb4R S225 71,2
Error in line 90: S912 A266 57,1
Error in line 103: oKb4R A13 87,18
Error in line 102: PVx A13 61,2
Error in line 113: TOa2ajrYe A266 7,4
Error in line 98: oKb4R A13 75,0
Error in line 125: eEiQZoI A13 54,6
Error in line 129: eEiQZoI S225 19,8
Error in line 135: oKb4R S225 -2,3
Error in line 119: TOa2ajrYe A13 37,8
Error in line 149: eEiQZoI S912 30,41
Error in line 148: eEiQZoI S912 49,4
Error in line 152: 9NFdVUf A13 72,4
Error in line 141: S912 A266 89,4
Error in line 140: TOa2ajrYe S225 56,8
Error in line 164: eEiQZoI A266 698,6
Error in line 171: PVx S225 30,7
Error in line 180: PVx S912 18,3
Error in line 212: PVx S912 77,4
Error in line 214: TOa2ajrYe S225 93,3
Error in line 213: PVx S225 3,7
Error in line 215: 9NFdVUf S225 34,9
Error in line 227: eEiQZoI S225 28,1
Error in line 229: eEiQZoI S912 22,3
Error in line 232: eEiQZoI S225 49,8
Error in line 233: PVx S912 68,9
Error in line 224: TOa2ajrYe S225 14,5
